Object dimensions become -2bajillion when deleting keyframe with this NLA setup #90387

Closed
opened 2021-08-02 19:21:07 +02:00 by Demeter Dzadik · 6 comments
Member

System Information
Operating system: Linux-5.8.0-7642-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.56

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-02 15:26, hash: 77187718e4

Short description of error
It seems my animators have found a way to make objects get swallowed by the void while they were using the Animation Layers addon.
This addon masks the NLA system with a more user-friendly UI, so nobody really knows what's going on under the hood, myself included, but one thing's for sure, the animation of the rig shouldn't be affecting the object transforms of the meshes, even if the rig were to end up being scaled to 0 or translated to FLOAT_MAX, or whatever it is that happens here

Exact steps for others to reproduce the error

  • File: 010_0030_A_objects_into_the_void.blend

  • Note the NLA setup in the bottom right.

  • Delete the keyframes of the active action.

  • Enter Object mode, select one of the mesh objects in the outliner, eg. "GEO-jay_body"

  • Check its transforms under Sidebar->Transforms
    image.png

  • Note there is also a "Cube" which is parented to the root bone rather than being deformed by an armature modifier. This also disappears, but instead of having dimensions of -2billion, its dimensions are 0, and are stuck that way.

I would also really appreciate steps to bring back an object once it enters this state, because I could not find any.

**System Information** Operating system: Linux-5.8.0-7642-generic-x86_64-with-glibc2.32 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.56 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-02 15:26, hash: `77187718e4` **Short description of error** It seems my animators have found a way to make objects get swallowed by the void while they were using the Animation Layers addon. This addon masks the NLA system with a more user-friendly UI, so nobody really knows what's going on under the hood, myself included, but one thing's for sure, the animation of the rig shouldn't be affecting the object transforms of the meshes, even if the rig were to end up being scaled to 0 or translated to FLOAT_MAX, or whatever it is that happens here **Exact steps for others to reproduce the error** - File: [010_0030_A_objects_into_the_void.blend](https://archive.blender.org/developer/F10260541/010_0030_A_objects_into_the_void.blend) - Note the NLA setup in the bottom right. - Delete the keyframes of the active action. - Enter Object mode, select one of the mesh objects in the outliner, eg. "GEO-jay_body" - Check its transforms under Sidebar->Transforms ![image.png](https://archive.blender.org/developer/F10260529/image.png) - Note there is also a "Cube" which is parented to the root bone rather than being deformed by an armature modifier. This also disappears, but instead of having dimensions of -2billion, its dimensions are 0, and are stuck that way. I would also really appreciate steps to bring back an object once it enters this state, because I could not find any.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Author
Member

Here is another file with perhaps more interesting repro steps:

  • 010_0030_A_enabling_anim_curves_deletes_vertices.blend
  • Enable the STR-Tongue curves in the graph editor
  • Some parts of the tongue disappear. This can make some sense if the bones' scale becomes 0, it's sort of understandable that vertices only attached to that bone disappear fully.
  • Re-disable the curves in the graph editor
  • The disappeared vertices don't come back.

I hope this is the same issue.

Here is another file with perhaps more interesting repro steps: - [010_0030_A_enabling_anim_curves_deletes_vertices.blend](https://archive.blender.org/developer/F10262646/010_0030_A_enabling_anim_curves_deletes_vertices.blend) - Enable the STR-Tongue curves in the graph editor - Some parts of the tongue disappear. This can make some sense if the bones' scale becomes 0, it's sort of understandable that vertices only attached to that bone disappear fully. - Re-disable the curves in the graph editor - The disappeared vertices don't come back. I hope this is the same issue.

This issue was referenced by 0342fb5d20

This issue was referenced by 0342fb5d20cd13b495a7511ccfdfc3044d83cb04

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2021-08-03 13:48:45 +02:00

There is a lot of hidden stuff going on in F10262646, so it's really hard to figure out what's exactly being animated, and how it interacts with all the drivers, hidden geometry, hidden lattices, etc.

On the terminal there are also warnings Division by Zero in Driver: 'tanScale/inheritedScale' and Math Domain Error in Driver: 'tanScale/inheritedScale', so my bet is that these drivers are doing some funky things as well.

There is a lot of hidden stuff going on in [F10262646](https://archive.blender.org/developer/F10262646/010_0030_A_enabling_anim_curves_deletes_vertices.blend), so it's really hard to figure out what's exactly being animated, and how it interacts with all the drivers, hidden geometry, hidden lattices, etc. On the terminal there are also warnings `Division by Zero in Driver: 'tanScale/inheritedScale'` and `Math Domain Error in Driver: 'tanScale/inheritedScale'`, so my bet is that these drivers are doing some funky things as well.
Author
Member

Nevermind actually, what happens in that 2nd file sort of makes sense to me now. For some reason I thought when I disable the anim curve it should reset the pose, but that's not how that works. Whoops!

Thanks a lot for the fix! We'll see if the Animation Layers addon causes more headaches in the future. This kerfuffle got me a bit more familiar with NLA shennanigans (although I still don't fully understand what the addon is doing and why exactly) and now I won't be spooked by numbers going into -2 gazillion, it should be easier to troubleshoot things! :D

Nevermind actually, what happens in that 2nd file sort of makes sense to me now. For some reason I thought when I disable the anim curve it should reset the pose, but that's not how that works. Whoops! Thanks a lot for the fix! We'll see if the Animation Layers addon causes more headaches in the future. This kerfuffle got me a bit more familiar with NLA shennanigans (although I still don't fully understand what the addon is doing and why exactly) and now I won't be spooked by numbers going into -2 gazillion, it should be easier to troubleshoot things! :D
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90387
No description provided.